Fixed the background not covering the entire page when adding a new row of books.

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 .flavour-text {
-    padding: 25px;
+    padding: 15px;
     margin: 20px;
 
     display: flex;
